--- a/languages/lt_LT.po
+++ b/languages/lt_LT.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Zerif Lite\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-07-17 14:38+0200\n"
-"PO-Revision-Date: 2015-07-25 09:16+0200\n"
+"PO-Revision-Date: 2015-07-25 10:03+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -496,23 +496,23 @@ msgstr "Klaidingai užpildyta"
 
 #: front-page.php:451
 msgid "Your Name"
-msgstr ""
+msgstr "Vardas"
 
 #: front-page.php:457
 msgid "Your Email"
-msgstr ""
+msgstr "El. pašto adresas"
 
 #: front-page.php:463
 msgid "Subject"
-msgstr ""
+msgstr "Tema"
 
 #: front-page.php:469
 msgid "Your Message"
-msgstr ""
+msgstr "Pranešimas"
 
 #: front-page.php:474
 msgid "Send Message"
-msgstr ""
+msgstr "Siųsti"
 
 #: functions.php:79
 msgid "Primary Menu"
